--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -81,7 +81,7 @@ body .header_menu ul li a:hover {
 	border-color: #fff;
 }
 
-body .header_menu ul li abody .menu_ativo {
+body .header_menu ul li .menu_ativo {
 	border-color: #fff;
 }
 
